--- a/index.html
+++ b/index.html
@@ -27,52 +27,82 @@
       </nav>
       <div class="banner">
         <div class="banner-content">
-
           <h3 class="banner-greeting">Hi, I am</h3>
           <h1 class="banner-title">Mary Hardy</h1>
           <p class="banner-description">
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary"  class="banner-btn">Download CV</button>
+          <button class="btn-primary" class="banner-btn">Download CV</button>
           <button class="btn-primary" class="banner-btn">Contact</button>
-
         </div>
 
         <img class="profile-picture" src="./image/hardy.png" alt="hardy" />
-        
-
       </div>
     </header>
 
     <main>
-       <section class="about">
+      <section class="about">
         <h3 class="section-title">About Me</h3>
-        <p class="section-description">I,m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        <p class="section-description">
+          I,m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
 
         <div class="about-info-container">
-
-         <div class="about-info">
+          <div class="about-info">
             <h4 class="info-tile">Name:</h4>
             <p class="info-discription">Mary Hardy</p>
-         </div>
-         <div class="about-info">
+          </div>
+          <div class="about-info">
             <h4 class="info-tile">Email:</h4>
             <p class="info-discription">info@gmail.com</p>
-         </div>
-         <div class="about-info">
+          </div>
+          <div class="about-info">
             <h4 class="info-tile">Date of birth:</h4>
             <p class="info-discription">11 November 1987</p>
-         </div>
-         <div class="about-info">
+          </div>
+          <div class="about-info">
             <h4 class="info-tile">From:</h4>
-            <p class="info-discription">
-                Los Angeles, USA</p>
-         </div>
+            <p class="info-discription">Los Angeles, USA</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- what i do section start -->
+      <section>
+        <h3 class="section-title">What I do</h3>
+        <p class="section-discription" id="what-i-do-discription">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+        <div class="skills-container">
+
+            <div class="skill">
+              <img src="image/icon/js.png" alt="">
+              <h3 class="skill-title">Vanilla JavaScript </h3>
+              <p class="skill-discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+              <img src="./image/icon/nodejs.png" alt="">
+              <h3 class="skill-title">Node.js</h3>
+              <p class="skill-discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+              <img src="image/icon/react.png" alt="">
+              <h3 class="skill-title">React</h3>
+              <p class="skill-discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+              <img src="image/icon/mongo.png" alt="">
+              <h3 class="skill-title">MongoDB</h3>
+              <p class="skill-discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+        
 
         </div>
-
-       </section>
+      </section>
     </main>
 
     <footer></footer>
