--- a/index.html
+++ b/index.html
@@ -100,8 +100,12 @@
               <p class="skill-discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
             </div>
         
-
         </div>
+      </section>
+      <!-- resume section -->
+
+      <section>
+        <h3 class="section-title">A summary of My Resume</h3>
       </section>
     </main>
 
