--- a/index.html
+++ b/index.html
@@ -172,6 +172,21 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="footer-column">
+        <h3 id="lets-connect" class="section-title">Lets Connect</h3>
+        <p class="footer-description">
+          Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div class="social-links">
+          <a href=""><img src="image/icon/facebook.png" alt=""></a>
+          <a href=""><img src="image/icon/twitter.png" alt=""></a>
+          <a href=""><img src="image/icon/insta.png" alt=""></a>
+        </div>
+      </div>
+      <div class="footer-column">
+        <h3 id="lets-Message-me"  class="section-title">Let's Message me</h3>
+      </div>
+    </footer>
   </body>
 </html>
