--- a/index.html
+++ b/index.html
@@ -186,7 +186,18 @@
       </div>
       <div class="footer-column">
         <h3 id="lets-Message-me"  class="section-title">Let's Message me</h3>
+        
+      <form class="contact" action="" >
+
+        
+        <input type="text" placeholder="Your Name">
+        <input type="email" placeholder="Your Email">
+        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+        <input class="btn-primary" type="submit" value="submit">
       </div>
+
+
+      </form>
     </footer>
   </body>
 </html>
