--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     />
 
     <link rel="stylesheet" href="style/portfolio.css" />
+    <script src="https://kit.fontawesome.com/29ef7800bd.js" crossorigin="anonymous"></script>
   </head>
   <body>
+
     <header class="header">
       <nav>
         <h3 class="nav-title">
@@ -33,8 +35,8 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary" class="banner-btn">Download CV</button>
-          <button class="btn-primary" class="banner-btn">Contact</button>
+          <button class="btn-primary" class="banner-btn"><i class="fa-solid fa-download"></i>           Download CV</button>
+          <button class="btn-primary" class="banner-btn"><i class="fa-solid fa-phone"></i> Contact</button>
         </div>
 
         <img class="profile-picture" src="./image/hardy.png" alt="hardy" />
@@ -167,7 +169,7 @@
         
         <div class="download-cv">
           <button class="btn-primary">
-            Download CV
+            <i class="fa-solid fa-download"></i> Download CV
           </button>
       </section>
     </main>
